<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:background="#C2B280"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:layout_width="100dp"
        android:background="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_height="2dp"/>
    
    
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/almond"
        android:layout_marginLeft="16dp"
        android:clickable="true"
        app:cardElevation="2dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="150dp">


        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_width="122dp"
                android:layout_height="match_parent"
                android:src="@drawable/warning" />


            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="13dp"
                android:layout_toRightOf="@id/iconImageView"
                android:background="@color/cinnamon" />


            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iconImageView"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/playfair_display"
                    android:text="Name"
                    android:textColor="@color/taupe"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/selector_fav_place"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>


            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/nrTelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="N/A"
                android:layout_below="@id/layout"
                android:textSize="15sp"
                android:textColor="@color/taupe"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/iconImageView"
                android:textStyle="bold"
                android:fontFamily="@font/playfair_display"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/programTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="program"
                android:layout_below="@id/nrTelTextView"
                android:textSize="15sp"
                android:textColor="@color/taupe"
                android:layout_marginLeft="30dp"
                android:layout_toRightOf="@id/iconImageView"
                android:layout_marginBottom="2dp"
                android:textStyle="bold"
                android:fontFamily="@font/playfair_display"/>


        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ratingsScrollContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/ratingSectionTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_display"
                android:text="@string/rating_section_title"
                android:textColor="@color/taupe"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ratingSummaryContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/averageRatingBar"
                    style="@style/YellowRatingBarSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/YellowRatingBarSmall"
                    android:progressTint="@color/rating_star_filled"
                    android:progressBackgroundTint="@color/rating_star_empty"
                    android:secondaryProgressTint="@color/rating_star_background"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="0"
                    android:stepSize="0.5" />

                <TextView
                    android:id="@+id/averageRatingTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/playfair_display"
                    android:text="@string/rating_average_placeholder"
                    android:textColor="@color/taupe"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/reviewCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/playfair_display"
                    android:text=""
                    android:textColor="@color/taupe"
                    android:textSize="14sp" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/ratingsProgressBar"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="@color/cinnamon" />

            <TextView
                android:id="@+id/emptyReviewsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/playfair_display"
                android:text="@string/rating_no_reviews"
                android:textColor="@color/taupe"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Evaluează locația"
                android:textAlignment="center"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/taupe"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/userRatingBar"
                style="@style/YellowRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:theme="@style/YellowRatingBar"
                android:progressTint="@color/rating_star_filled"
                android:progressBackgroundTint="@color/rating_star_empty"
                android:secondaryProgressTint="@color/rating_star_background"
                android:layout_marginTop="8dp"
                android:numStars="5"
                android:stepSize="1"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <EditText
                android:id="@+id/reviewEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/review_input_background"
                android:gravity="top|start"
                android:minHeight="120dp"
                android:fontFamily="@font/playfair_display"
                android:textColor="@color/taupe"
                android:textColorHint="@color/text_hint"
                android:textSize="15sp"
                android:lineSpacingExtra="4dp"
                android:hint="@string/rating_input_hint" />

            <Button
                android:id="@+id/submitReviewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:background="@drawable/custom_button"
                android:fontFamily="@font/playfair_display"
                android:text="@string/rating_save_button"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:overScrollMode="never" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/openInMapsButton"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_button"
        android:text="Du-mă acolo"
        android:textColor="@color/white" />

    <Button
        android:layout_marginBottom="10dp"
        android:id="@+id/closeButton"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_button"
        android:text="@string/inchide"
        android:textColor="@color/white" />

</LinearLayout>

